syntax = "proto3";
package syft.proto.util;

message JsonMessage {
  string obj_type = 1;
  string content = 2;
}
